// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`editor operation regression workflow: add video → add image → move clip → trim 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 4000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 4000,
          "startMs": 0,
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 6000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: multi-track with text overlay 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "title",
          "durationMs": 2000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 1000,
          "text": {
            "backgroundColor": "black@0.5",
            "color": "white",
            "fontSize": 24,
            "value": "Title",
          },
        },
        {
          "assetId": "",
          "clipKind": "title",
          "durationMs": 1000,
          "id": "clip-2",
          "inMs": 0,
          "outMs": 1000,
          "startMs": 4000,
          "text": {
            "color": "yellow",
            "fontSize": 16,
            "value": "Subtitle",
          },
        },
      ],
      "id": "track-1",
    },
  ],
}
`;

exports[`editor operation regression workflow: cross-track move 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
    {
      "clips": [
        {
          "assetId": "",
          "clipKind": "title",
          "durationMs": 1000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 1000,
          "startMs": 0,
          "text": {
            "color": "white",
            "fontSize": 20,
            "value": "Overlay",
          },
        },
        {
          "assetId": "i1",
          "clipKind": "image",
          "durationMs": 3000,
          "id": "clip-2",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 2000,
        },
      ],
      "id": "track-1",
    },
  ],
}
`;

exports[`editor operation regression workflow: duration change clamps existing clips 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 3000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 3000,
          "startMs": 0,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: update clip properties 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "crop": {
            "height": 70,
            "width": 140,
            "x": 10,
            "y": 10,
          },
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
          "transform": {
            "rotation": 45,
            "scale": 1.5,
            "x": 20,
            "y": -10,
          },
          "volume": 0.5,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;

exports[`editor operation regression workflow: add and remove clips 1`] = `
{
  "tracks": [
    {
      "clips": [
        {
          "assetId": "v1",
          "clipKind": "video",
          "durationMs": 5000,
          "id": "clip-0",
          "inMs": 0,
          "outMs": 5000,
          "startMs": 0,
        },
        {
          "assetId": "a1",
          "clipKind": "audio",
          "durationMs": 2000,
          "id": "clip-1",
          "inMs": 0,
          "outMs": 2000,
          "startMs": 8000,
        },
      ],
      "id": "track-0",
    },
  ],
}
`;
